welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:2: error: overloaded method value % with alternatives:
  (x: Double)Double <and>
  (x: Float)Float <and>
  (x: Long)Long <and>
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int
 cannot be applied to (Boolean)
	if ( (Math.max(a,b))%(Math.min(a,b)==3)) {
                            ^